--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,47 @@
 <h1>Eat Da Burgers</h1>
-
+<img src="assets/css/krabby_burger.png" class="center">
 <main>
     <div class="container">
         <div class="row">
             <div class="col-6">
                 <h2>What Is Your Burger List</h2>
+                <ul>
                     {{#each burgers}}
                     {{#unless this.devoured}}
                     <div class="not-devoured-burger">
                         <form class="update-button">
+                    <li>
                         {{ this.burger_name }}
                         <button type="submit" data-id={{this.id}} class="btn btn-default burger-ready">Devour the Burger</button>
+                    </li>
                         </form>
                     </div>
                     {{/unless}}
                     {{/each}}
+                </ul>
             </div>
             <div class="col-6">
                 <h2>Eatened Burger List</h2>
+                <ul>
                     {{#each burgers}}
                     {{#if this.devoured}}
-                        {{ this.burger_name }}
+                        <li>
+                            {{ this.burger_name }}
+                        </li>    
                     {{/if}}
                     {{/each}}
+                </ul>
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 add">
                 <h2>Add New Burger</h2>
                 <form class="create-form">
                     <div class="form-group">
                         <label for="name"></label>
                         <textarea id="name" name="burger_name" placeholder="What burger do you want to eat?"></textarea>
                     </div>
-                    <button type="submit">Add Burger</button>
+                    <button type="submit" class="btn btn-default">Add Burger</button>
                 </form>
             </div>
         </div>
